feat : jdk21 버전에 맞게 리팩토링 및 코드 설명 추가